infra/apps/firefly/firefly-forwardauth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: firefly-authelia-forwardauth
  namespace: firefly
spec:
  forwardAuth:
    address: http://authelia.authelia.svc.cluster.local/auth/api/authz/forward-auth
    trustForwardHeader: true
    maxResponseBodySize: 1048576
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Name
      - Remote-Email
