infra/apps/firefly/firefly-strip-auth-headers-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: firefly-strip-auth-headers
  namespace: firefly
spec:
  headers:
    customRequestHeaders:
      Remote-User: ""
      Remote-Groups: ""
      Remote-Name: ""
      Remote-Email: ""
