infra/apps/firefly/firefly-strip-prefix-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: firefly-strip-prefix
  namespace: firefly
spec:
  stripPrefix:
    prefixes:
      - /firefly
