infra/apps/firefly/firefly-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly
  namespace: firefly
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: firefly
  template:
    metadata:
      labels:
        app.kubernetes.io/name: firefly
    spec:
      nodeSelector:
        region: sg
      volumes:
        - name: nginx-fastcgi-params
          configMap:
            name: firefly-nginx-remote-user
            items:
              - key: fastcgi_params_override
                path: fastcgi_params
      containers:
        - name: firefly
          image: fireflyiii/core:version-6.5.9
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: nginx-fastcgi-params
              mountPath: /etc/nginx/fastcgi_params
              subPath: fastcgi_params
              readOnly: true
          startupProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
